--- a/MauiAPP3BIMESTRE/AppShell.xaml
+++ b/MauiAPP3BIMESTRE/AppShell.xaml
@@ -15,14 +15,14 @@
             <Views: CadastroAtividade Title="Cadastro de Atividade"/>
             </ShellContent>
         </tab>
-        <Tab Title="Minhas Atividadesa" icon="meus_exercicios.png" Route=MinhasAtividade" >
+        <Tab Title="Minhas Atividadesa" icon="meus_exercicios.png" Route="MinhasAtividade" >
             <ShellContent>
                 <Views: ListaAtividades Title="Minhas Atividades"/>
             </ShellContent>
         </Tab>
         <Tab Title="Sobre" Icon="sobre.png">
             <ShellContent>
-                <Views: Sobre Title="Sobre o App"/>
+                <Views Sobre Title="Sobre o App"/>
             </ShellContent>
         </Tab>
 
